<package>
  <name>ros2_gpu_monitor</name>
  <version>1.0.0</version>
  <description>A ROS 2 application for monitoring GPU</description>

  <maintainer email=sagnikbasu95@gmail.com>Sagnik Basu</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/usb_cam/issues</url>
  <url type="repository">https://github.com/bosch-ros-pkg/usb_cam</url>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 

</package>