<package>
  <name>ros2_usb_cam</name>
  <version>1.0.0</version>
  <description>A ROS 2 Driver for V4L USB Cameras</description>

  <maintainer email=sagnikbasu95@gmail.com>Sagnik Basu</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/usb_cam/issues</url>
  <url type="repository">https://github.com/bosch-ros-pkg/usb_cam</url>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>ffmpeg</build_depend>

</package>
