<?xml version="1.0" ?>
<package format="3">
  <name>rtl-sdr_driver</name>
  <version>1.0.0</version>
  <description>
  Driver for RTL-SDR receivers
  </description>
  <maintainer email="sagnikbasu95@gmail.com">Sagnik Basu</maintainer>
  <author>Sagnik Basu</author>
  <license>BSD</license>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> 
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rosidl_cmake</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>novatel_gps_msgs</build_depend>  

  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
